2003-04-15  Henrik Sandklef  <hesa@sandklef.com>

	* src/*/*.c "plugin -> resource"

	* doc/*.texi "plugin -> resource"

2003-02-10  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: vararg/stdargs

	* src/lib/print_varargs.c: 

	* doc/xnee_exampl.texi (Examples): 

	* xnee.c: memset added

	* AUTHORS: author added

	* print_varargs.h: new file
	
2003-01-24  Henrik Sandklef  <hesa@sandklef.com>

	* build_web.sh: building todo.html

	* web/todo.bot: new file

	* web/todo.top: new file

2003-01-23  Henrik Sandklef  <hesa@sandklef.com>

	* src/lib/print_varargs.c: new file

2003-01-22  Henrik Sandklef  <hesa@sandklef.com>

	* src/cli/main.c: exit calls now uses enum ret values

	* src/lib/xnee_record.c: exit calls now uses enum ret values

	* src/lib/xnee.h: defines -> enum

	* configure.in: AC_FUNC_VPRINTF added

	* src/lib/print.h: moved all varargs functions to print_varargs.c

	* src/lib/print_varargs.c: new file

	* Makefile.xnee (CFLAGS): -DHAVE_HAVE_STDARG_H added

	* src/cli/parse.c: XNEE_VERBOSE removed

	* src/lib/xnee.c: removed longjump stuff

	* src/cli/main.c (main): xd not global anymore

2003-01-20  Henrik Sandklef  <hesa@sandklef.com>

	* build_web.sh: new file

	* TODO: various updates

	* doc/xnee_usage.texi: info updates

	* doc/xnee_synch.texi: info updates

	* doc/xnee_req.texi: info updates

	* doc/xnee_intro.texi: info updates

	* doc/xnee_install.texi: info updates

	* doc/xnee_faq.texi: info updates

	* doc/xnee_exampl.texi: info updates

	* doc/xnee_develop.texi: info updates

	* doc/xnee_devel_over.texi: info updates

	* doc/xnee_devel_down.texi: info updates

	* doc/xnee_devel_build.texi: info updates

	* doc/xnee_copying: new file

	* doc/texinfo.tex: replaced file

	* doc/fdl.texi: new file

	* doc/version.texi: new version 

	* doc/dev_version.texi: new version

	* doc/xnee.texi: info updates

	* src/lib/xnee_record.h: comment update

Sun Jan 19 14:21:56 2003    <xnee@sandklef.com>

	* doc/xnee.texi: added GNU FDL stuff
