@@ -1,7 +1,7 @@
 PACKAGE=\"cnee\"
 VERSION=\"2.0\"
 
-XOSD_DEFINE=-DHAVE_XOSD
+XOSD_DEFINE=
 XOSD_PATH=/home/hesa/xosd-2.2.5/
 XOSD_INC=-I${XOSD_PATH}/src -I${XOSD_PATH}/include
 XOSD_FLAGS=${XOSD_DEFINE} ${XOSD_INC} ${XOSD_LIB} -lxosd
@@ -15,7 +15,7 @@ CFLAGS = -W -Wall -pedantic -pedantic-errors  -Werror \
   -DPACKAGE=${PACKAGE} -DVERSION=${VERSION} \
   -I/usr/X11R6/include -I${XNEE_INC}\
   ${XOSD_FLAGS} \
-  -g -DHAVE_STDARG_H=1 
+  -g -DHAVE_STDARG_H=1 -DXNEE_WANT_DEBUG
 
 
 LDFLAGS = -L/usr/X11R6/lib -L./lib -L/usr/X/lib
